# threadx-cortex-r5-demo

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
cortex-r5-sample/: .gitignore  Cargo.toml  Makefile  build.rs  linker.ld  linker_zynqmp.ld
cortex-r5-sample/.cargo/: config.toml
cortex-r5-sample/src/: buffered_uart.rs  cadence_ttc.rs  cadence_uart.rs  config.rs  config_zynqmp.rs  exception.rs  gic.rs  lib.rs  main.rs  pl011_uart.rs  pl190_vic.rs  sp804_timer.rs  spsc.rs  startup.rs  thread.rs  threadx_error.rs  tx_initialize_low_level.S
cortex-r5-sample/src/safe/: host_test_stubs.rs  mod.rs  mutex.rs  queue.rs  thread.rs
cortex-r5-sample/tests/: compile_fail.rs
cortex-r5-sample/tests/ui/: data_guard_cannot_send.rs  data_guard_cannot_send.stderr  mutex_guard_cannot_send.rs  mutex_guard_cannot_send.stderr  mutex_guard_outlast_mutex.rs  mutex_guard_outlast_mutex.stderr  queue_handle_outlast_context.rs  queue_handle_outlast_context.stderr  thread_handle_outlast_context.rs  thread_handle_outlast_context.stderr
threadx-sys/: Cargo.toml  build.rs  wrapper.h
threadx-sys/src/: bindings.rs  lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
