# Workspace root for ThreadX Cortex-R5 demo
#
# This workspace ties together the embedded application and host tooling.
# The xtask pattern provides cargo-native commands: cargo xtask run, cargo xtask smoke

[workspace]
resolver = "2"
members = [
    "threadx-sys",
    "cortex-r5-sample",
    "xtask",
]

# Exclude externals from workspace (they have their own workspace roots)
exclude = [
    "externals",
]

# xtask alias: `cargo xtask` invokes `cargo run --manifest-path xtask/Cargo.toml --`
[workspace.metadata.xtask]
# Marker: this workspace supports `cargo xtask` commands

# Size-optimized release profile for embedded targets.
# Debug info (DWARF) is kept: it lives in non-loadable ELF sections and
# does not affect flash/RAM footprint on the target.
[profile.release]
codegen-units = 1
debug = 2
incremental = false
lto = "fat"
opt-level = "z"
panic = "abort"
