[package]
name = "cortex-r5-sample"
version = "0.1.0"
edition = "2021"
authors = ["National Cheng Kung University"]
license = "MIT"
description = "A basic Armv7-R demonstration application running ThreadX on QEMU"

# Library crate for safe wrappers
[lib]
name = "cortex_r5_sample"
path = "src/lib.rs"

# Binary requires the "embedded" feature (not enabled in host-test mode)
# This prevents the binary from being built during host-test
[[bin]]
name = "cortex-r5-sample"
path = "src/main.rs"
required-features = ["embedded"]

[features]
default = ["embedded"]
# Enable this feature for running compile-fail tests on host
host-test = []
# Enable this feature for building the embedded binary (mutually exclusive with host-test)
embedded = []

[dependencies]
embedded-alloc = "0.6.0"
static_cell = "2.1.0"
threadx-sys = { path = "../threadx-sys" }
byte-strings = "0.3.1"
critical-section = { version = "1.1", features = ["restore-state-u32"] }
heapless = "0.8"

[build-dependencies]
cc = "1.2.1"

[dev-dependencies]
trybuild = "1.0"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = false
opt-level = 1
overflow-checks = true
