[package]
name = "threadx-sys"
version = "0.1.0"
edition = "2021"
authors = ["National Cheng Kung University"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
bindgen = ["dep:bindgen"]

[build-dependencies]
bindgen = { version = "0.69.5", optional = true }
